--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "author": "陈浩庭",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "sha1": "^1.1.1"
   },
   "devDependencies": {
     "browser-sync": "^2.18.2",
@@ -24,6 +25,7 @@
     "gulp-minify-css": "^1.2.4",
     "gulp-nodemon": "^2.2.1",
     "gulp-stylus": "^2.6.0",
-    "gulp-uglify": "^2.0.0"
+    "gulp-uglify": "^2.0.0",
+    "http-proxy-middleware": "^0.17.3"
   }
 }
