--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "project_2",
   "version": "1.0.0",
-  "description": "项目二",
+  "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "测试"
+    "test": ""
   },
   "repository": {
     "type": "git",
@@ -13,7 +13,7 @@
   "keywords": [
     "关键词"
   ],
-  "author": "陈浩庭",
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.14.0",
