--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.14.0",
+    "http-proxy-middleware": "^0.17.3",
     "sha1": "^1.1.1"
   },
   "devDependencies": {
@@ -25,7 +26,6 @@
     "gulp-minify-css": "^1.2.4",
     "gulp-nodemon": "^2.2.1",
     "gulp-stylus": "^2.6.0",
-    "gulp-uglify": "^2.0.0",
-    "http-proxy-middleware": "^0.17.3"
+    "gulp-uglify": "^2.0.0"
   }
 }
